# web-guard

./: .gitignore  README.md  package.json  pnpm-lock.yaml
backend/: .env.example  BAIDU_MONITORING_REPORT.md  Cargo.toml  TESTING.md  demo_monitoring_baidu.sh  openapi.json  test_api.sh  test_monitoring.sh  test_monitoring_detailed.sh  verify_monitoring.sh
backend/migrations/: 001_initial_schema.sql  002_domain_name_refactor.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: mod.rs  openapi.rs  routes.rs
backend/src/api/handlers/: auth.rs  domains.rs  mod.rs  monitoring.rs  organizations.rs  public.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/db/: mod.rs  models.rs  pool.rs  queries.rs
backend/src/monitors/: mod.rs  scheduler.rs  ssl.rs  uptime.rs
frontend/: CLAUDE.md  biome.json  index.html  o2t.config.mjs  package.json  uno.config.ts  vite.config.ts
frontend/.config/: igit.yaml
frontend/src/: App.tsx  main.tsx  routes.d.ts
frontend/src/api/: index.ts  schema.ts
frontend/src/assets/styles/: global.css
frontend/src/components/: AuthLayout.tsx  DataTable.tsx  Navigation-working.tsx  Navigation.tsx  StatusBadge.tsx  StatusBar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  DomainDetail.tsx  Domains.tsx  Login.tsx  PublicStatus.tsx  Register.tsx  Settings.tsx  index.tsx  simple-login.tsx  test.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx  login-working.tsx  register-working.tsx
frontend/src/pages/index/: alerts.tsx  dashboard-working.tsx  index.tsx  organizations.tsx  settings.tsx
frontend/src/pages/index/domains/: [id]-working.tsx  [id]-working.tsx.bak2  (+3 more)
frontend/src/pages/status/: [orgSlug].tsx
frontend/src/stores/: alertStore.ts  authStore.ts  domainStore.ts  index.ts  monitorStore.ts  orgStore.ts  snapshotStore.ts
