[package]
name = "web-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "tower-log"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-br", "limit"] }
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
deadpool-postgres = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
rand = "0.8"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Decimal types
rust_decimal = { version = "1.32", features = ["serde"] }

# Monitoring & DNS
hickory-resolver = "0.24"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls = { version = "0.23", features = ["ring"] }
x509-parser = "0.16"
webpki = "0.22"
rustls-pemfile = "2.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio-openssl = "0.6"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Rate limiting
governor = "0.6"

# Config
config = "0.14"

# Utils
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
httpc-test = "0.1"
